--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -7,8 +7,14 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
     volumes:
       - ./museum.yaml:/museum.yaml:ro
       - ./data:/data:ro
@@ -22,8 +28,14 @@ services:
 
   postgres:
     image: postgres:15-trixie
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
     # Wait for postgres to accept connections before starting museum.
     healthcheck:
       test: pg_isready -q -d ${POSTGRES_DB} -U ${POSTGRES_USER}
@@ -37,8 +49,14 @@ services:
     ports:
       - 3200:3200 # MinIO API
       # - 3201:3201 # MinIO Console (uncomment to access externally)
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
     command: server /data --address ":3200" --console-address ":3201"
     volumes:
       - minio-data:/data
@@ -71,8 +89,13 @@ services:
       - 3004:3004
     environment:
       - NODE_ENV=development
-    env_file:
-      - .env
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
+      - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
 
 volumes:
   postgres-data:
