--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -8,7 +8,7 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      - ENTE_DB_HOST=172.30.0.3
+      - ENTE_DB_HOST=postgres
       - ENTE_DB_PORT=5432
       - ENTE_DB_NAME=${POSTGRES_DB}
       - ENTE_DB_USER=${POSTGRES_USER}
