Add 'dokploy' network to postgres service

--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -43,6 +43,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - default
+      - dokploy
 
   minio:
     image: minio/minio
