--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -18,6 +18,7 @@ services:
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
       - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
       - ENTE_ALBUMS_ORIGIN=${ENTE_ALBUMS_ORIGIN}
+      - ENTE_S3_REGION=${ENTE_S3_REGION}
     volumes:
       - ./data:/data:ro
     networks:
