--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -18,6 +18,10 @@ services:
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
       - ENTE_API_ORIGIN=${ENTE_API_ORIGIN}
       - ENTE_ALBUMS_ORIGIN=${ENTE_ALBUMS_ORIGIN}
+      - ENTE_S3_ACCESS_KEY_ID=ente_minio_admin
+      - ENTE_S3_SECRET_ACCESS_KEY=${ENTE_S3_SECRET_ACCESS_KEY}
+      - ENTE_S3_BUCKET_NAME=b2-eu-cen
+      - ENTE_S3_ENDPOINT=http://minio:3200
       - ENTE_S3_REGION=${ENTE_S3_REGION}
     volumes:
       - ./data:/data:ro
