--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -22,6 +22,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD}
       - AWS_REGION=eu-central-1
       - AWS_ENDPOINT_URL=http://minio:3200
+      - AWS_S3_BUCKET=${AWS_S3_BUCKET}
     volumes:
       - ./data:/data:ro
     networks:
