--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -18,7 +18,7 @@ services:
         b2-eu-cen:
           key: $${MINIO_ROOT_USER}
           secret: $${MINIO_ROOT_PASSWORD}
-          endpoint: minio:3200
+          endpoint: https://storage.photos.zem.cool
           region: eu-central-1
           bucket: b2-eu-cen
 
