--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -97,6 +97,8 @@ services:
     environment:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - MINIO_SERVER_URL=https://storage.photos.zem.cool
+      - MINIO_BROWSER_REDIRECT_URL=https://storage.photos.zem.cool
     command: server /data --address ":3200" --console-address ":3201"
     volumes:
       - minio-data:/data
