--- a/server/config/compose.yaml
+++ b/server/config/compose.yaml
@@ -18,7 +18,7 @@ services:
         b2-eu-cen:
           key: $${MINIO_ROOT_USER}
           secret: $${MINIO_ROOT_PASSWORD}
-          endpoint: http://minio:3200
+          endpoint: https://storage.photos.zem.cool
           region: eu-central-1
           bucket: b2-eu-cen
 
@@ -69,6 +69,7 @@ services:
     command: |
       sh -c '
       cp /shared-config/museum.yaml /museum.yaml
+      echo "91.98.67.202 storage.photos.zem.cool" >> /etc/hosts
       ./museum
       '
     networks:
